test/library/packages/UnitTest/UnEqualComplex.chpl
use UnitTest;
var x = 5 + 6i;
var y = 7i;
UnitTest.assertEqual(x,y);